Fix CSS text overflow

--- a/src/client/components/torrent_list/torrent_list_entry.scss
+++ b/src/client/components/torrent_list/torrent_list_entry.scss
@@ -53,6 +53,7 @@ $torrent-list-entry-color: #272626;
     color: white;
     line-height: 24px;
     margin-top: -3px;
+    word-break: break-word;
   }
 
   .bottom-text {
